Fix text alignment

--- a/styles.css
+++ b/styles.css
@@ -95,7 +95,6 @@ h1 {
   color: hsla(0, 0%, 95%, 0.8);
   font-size: 8rem;
   letter-spacing: 1.5rem;
-  padding-left: 1.5rem;
   opacity: 1;
   text-align: center;
   text-shadow: 0px -12px 50px hsla(153, 12%, 5%, 0.9),
@@ -155,11 +154,9 @@ h1 {
 
 @keyframes scale-in {
   from {
-    margin-bottom: -50%;
-    flex: 1 1 0%;
+    flex: 0 0 0%;
   }
   to {
-    margin-bottom: 0;
     flex: 1 1 100%;
   }
 }
